# HeadHunter_parser_DB

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/classes/: abstract_classes.py  dbmanager.py
src/config/: config_func.py  database.ini
src/sql_queries/: queries.sql
src/utils/: utils.py
